# full_stack

./: Cargo.toml  Makefile.toml  readme.md  testdb.sqlite3
backend/: Cargo.toml
backend/migrations/2021-07-28-002242_task/: down.sql  up.sql
backend/src/: main.rs  todo.rs
backend/src/db/: mod.rs
frontend/: Cargo.toml  Makefile.toml  index.html
frontend/src/: lib.rs  main.rs
migrations/2021-07-28-002242_task/: up.sql
src/: lib.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
