[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["chrono","sqlite"] }
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
full_stack = { path = ".."}
rocket_cors = { version = "0.5.0", default-features = false }
chrono = "0.4.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]