[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
full_stack = { path = ".." }
seed = "0.6.0"
wasm-bindgen = "^0.2.50"
web-sys = "^0.3.27"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }